# tse-analytics-2024

./: pyproject.toml  readme.md
src/: analyses.py  ingestion.py  ingestions_pb.json  partidos.sql  query_cand_prefeito.sql  query_cand_prefeito_pb.sql
